--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       border: 1px solid #000;
     }
     table, td {
-      border: 0px solid #000;
+      border: 0px solid #fff;
     }
     th, td {
       padding: 4px;
