--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
       const fecha = new Date();
       const meses = ['ENERO','FEBRERO','MARZO','ABRIL','MAYO','JUNIO','JULIO','AGOSTO','SEPTIEMBRE','OCTUBRE','NOVIEMBRE','DICIEMBRE'];
-      const fechaTexto = `H. VERACRUZ, VER. A. ${fecha.getDate()} DE ${meses[fecha.getMonth()]} DE ${fecha.getFullYear()}`;
+      const fechaTexto = `H. VERACRUZ, VER. A. ________ DE _____________________ DE ${fecha.getFullYear()}`;
 
       const { jsPDF } = window.jspdf;
       const pdf = new jsPDF({ orientation: 'landscape', unit: 'pt', format: 'letter' });
