--- a/index.html
+++ b/index.html
@@ -206,7 +206,17 @@
 
         // tabla pequeña en esquina inferior derecha
         const tablaMini = `
-          <table style="font-size:12px; border:1px solid #000; border-collapse:collapse; width:520px; position:absolute; bottom:1px; right:60px; background:#fff;">
+          <table style="font-size:11px; border:0px solid #000; border-collapse:collapse; width:520px; position:absolute; bottom:1px; right:60px; background:#fff;">
+            <tr>
+              <th style="border:0px solid #000;">ㅤㅤㅤ</th>
+              <th style="border:0px solid #000;">VIN 1</th>
+              <th style="border:0px solid #000;">VIN 2</th>
+              <th style="border:0px solid #000;">VIN 3</th>
+              <th style="border:0px solid #000;">VIN 4</th>
+              <th style="border:0px solid #000;">VIN 5</th>
+              <th style="border:0px solid #000;">VIN 6</th>
+              <th style="border:0px solid #000;">VIN 7</th>
+            </tr>
             <tr>
               <th>VIN FISICO (VIN PLATE)</th>
               <th style="border:1px solid #000;">ㅤㅤㅤ</th>
