--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
         // tabla pequeña en esquina inferior derecha
         const tablaMini = `
-          <table style="font-size:11px; border:0px solid #000; border-collapse:collapse; width:520px; position:absolute; bottom:1px; right:60px; background:#fff;">
+          <table style="font-size:11px; border:0px solid #000; border-collapse:collapse; width:520px; position: absolute; top: 680px; left: 580px; bottom:-1px; right:60px; background:#fff;">
             <tr>
               <th style="border:0px solid #000;">ㅤㅤㅤ</th>
               <th style="border:0px solid #000;">VIN 1</th>
@@ -273,16 +273,16 @@
             <p align="center"><strong>Observaciones:</strong> ____________________________________________________________________________________________</p>
             ${tablaHTML}
             <br><br><br><br>
-            <table style="width:100%; border:none; font-size:11px; margin-top:60px;">
+            <table style="width:100%; border:none; font-size:11px; margin-top:0px;">
               <tr>
                 <td style="text-align:center;"><strong>SSA MÉXICO</strong><br>VIAJE CONFIRMADO , VIN´s CORRECTOS</td>
                 <td style="text-align:center;"><strong>TRANSPORTISTA</strong><br>VIAJE CONFIRMADO , VIN´s CORRECTOS</td>
                 <td style="text-align:center;"><strong>AGENTE ADUANAL</strong><br>DOCUMENTACION PARA SALIDA DE VIAJE ENTREGADA</td>
               </tr>
               <tr>
-                <td style="height:60px; vertical-align:bottom;"><div style="border-bottom: 1px solid #000; width:80%; margin:0 auto;"></div></td>
-                <td style="height:60px; vertical-align:bottom;"><div style="border-bottom: 1px solid #000; width:80%; margin:0 auto;"></div></td>
-                <td style="height:60px; vertical-align:bottom;"><div style="border-bottom: 1px solid #000; width:80%; margin:0 auto;"></div></td>
+                <td style="height:40px; vertical-align:bottom;"><div style="border-bottom: 1px solid #000; width:80%; margin:0 auto;"></div></td>
+                <td style="height:40px; vertical-align:bottom;"><div style="border-bottom: 1px solid #000; width:80%; margin:0 auto;"></div></td>
+                <td style="height:40px; vertical-align:bottom;"><div style="border-bottom: 1px solid #000; width:80%; margin:0 auto;"></div></td>
               </tr>
               <tr>
                 <td style="text-align:center;">NOMBRE Y FIRMA</td>
